tests/fixtures/valid/inference.ny
fn main() -> i32 {
    x := 5;
    y := 10;
    sum := x + y;
    return sum;
}
