tests/fixtures/invalid/multi_error.ny
fn main() -> i32 {
    x := 10 +;
    y := 20;
    z := 30 *;
    return y;
}
